# fastapi-piccolo-demo

./: .env.template  Dockerfile  Makefile  README.md  data_ingestion.py  docker-compose.yml  gunicorn.conf.py  piccolo_conf.py  pyproject.toml  server.py  settings.py
core/api/: application.py  constants.py
core/api/routes/: health_check.py  ships.py
core/api/schema/: responses.py
core/db/models/: ship.py  ship_position.py
data/: data_ingestion.py  positions.csv
polestar/: piccolo_app.py
polestar/piccolo_migrations/: add_ship_and_ship_position.py  polestar_2023_11_20t23_42_43_697470.py
tests/: conftest.py
tests/routes/: test_ships.py
