[project]
name = "polestar"
version = "0.1.0"
description = ""
authors = [
    {name = "devsarvesh92", email = "sarveshdev92@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "piccolo>=1.1.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pandas>=2.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
