[project]
name = "polestar"
version = "0.1.0"
description = ""
authors = [
    {name = "devsarvesh92", email = "sarveshdev92@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pandas>=2.1.3",
    "black>=23.11.0",
    "piccolo[postgres]>=1.1.1",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.1",
    "gunicorn>=21.2.0",
    "uvicorn>=0.24.0.post1",
    "httpx>=0.25.1",
]
requires-python = "==3.11.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest]
[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "WARNING"
log_auto_indent = true
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--ignore=deps,__pypackages__",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "ships: Run tests for ships end point",
]
